--- a/src/Squawkings/Content/Site.css
+++ b/src/Squawkings/Content/Site.css
@@ -1,49 +1,3 @@
-body
-{
-    font-size: .85em;
-    font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
-    color: #232323;
-    background-color: #fff;
-}
-
-header,
-footer,
-nav,
-section {
-    display: block;
-}
-
-/* Styles for basic forms
------------------------------------------------------------*/
-
-fieldset 
-{
-    border:1px solid #ddd;
-    padding:0 1.4em 1.4em 1.4em;
-    margin:0 0 1.5em 0;
-}
-
-legend 
-{
-    font-size:1.2em;
-    font-weight: bold;
-}
-
-textarea 
-{
-    min-height: 75px;
-}
-
-.editor-label 
-{
-    margin: 1em 0 0 0;
-}
-
-.editor-field 
-{
-    margin:0.5em 0 0 0;
-}
-
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
@@ -72,4 +26,107 @@ textarea
 .validation-summary-valid
 {
     display: none;
+}
+
+/* Robs Styles 
+-----------------------------------------------------------*/
+.rob-background-default {
+    padding: 0;
+    background-color: #F2F2F2;
+    font-size: 12px;
+    line-height: 18px;
+    font-family: "Helvetica Neue", Arial; 
+}
+.rob-container 
+{
+    background-color: white;
+	margin: 0 auto;
+}
+.rob-post-outer {
+    background-color: white;
+    color: #333;
+    text-align: left;
+    border: 1px solid #D4D4D4;
+    min-height:100px;
+    height:auto !important;
+    height:100px; 
+}
+.rob-post-inner {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.rob-name {
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 3px;
+}
+.rob-post-text {
+    color: #333;
+}
+.rob-post-time {
+    padding-top: 15px;
+    color: #A2A2A2;
+}
+.span12, .rob-container {
+    width: 960px;
+}
+.span11 {
+    width: 880px;
+}
+.span1, .span2 , .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {
+    margin: 0px auto;
+}
+.span10 {
+    width: 800px;
+}
+.span9 {
+    width: 720px;
+}
+.span8 {
+    width: 640px;
+}
+.span7 {
+    width: 560px;
+}
+.span6 {
+    width: 480px;
+}
+.span5 {
+    width: 400px;
+}
+.span4 {
+    width: 320px;
+}
+.span3 {
+    width: 240px;
+}
+.span2 {
+    width: 160px;
+}
+.span1 {
+    width: 80px;
+}
+.rob-post-outer2, .rob-post-text-small {
+	margin-left: auto;
+	margin-right: auto;
+    background-color: #F1F1F1;
+    color: #535353;
+    font-size: 34px;
+    text-align: left;
+}
+.rob-post-button  {
+    background-color: #0F95D8;
+    color: white;
+    text-align: right;
+    width: 80px;
+}
+.rob-post-button-row {
+    background-color: #0F95D8;
+    color: white;
+    text-align: right;
+    width: 80px;
+}
+.rob-post-text-small {
+    font-size: 10px;
+    text-align: left;
 }
