--- a/src/Squawkings/Views/Shared/Index.cshtml
+++ b/src/Squawkings/Views/Shared/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div>
-    <div class="container span10">
+    <div class="container span12">
         <div id="header">
             <div id="global-header-text">
                 Global Squawks
@@ -13,18 +13,26 @@
                 See everything happening right now
             </div>
         </div>
-        <div class="container span10">
+        
+        <div class="post-outer rounded span12" style="margin-bottom: 15px;">
+            <div style="padding: 15px;text-align: right;">
+                <textarea cols="123" rows="4">This is my first squawk!</textarea>
+                <input id="post-button" type="button" value="Squawk" style="margin-top: 10px;" />
+            </div>
+        </div>  
+        
+        <div class="container span12">
             @foreach (var item in Model.SquawkDisps)
             {
-                <div class="post-outer rounded span10">
-                    <div class="post-inner span10">
+                <div class="post-outer rounded span12">
+                    <div class="post-inner span12">
                         <div>
                             <div class="outer" style="float: left;">
                                 <div class="image span1">
                                     <a href="@Url.Action("Index", new { id=0 })"><img src="../../Content/Images/@(item.AvatarUrl)" alt="View" /></a>
                                 </div>
                             </div>
-                            <div class="span9" style="float: left;padding-left: 10px;">
+                            <div class="span11" style="float: left;padding-left: 10px;">
                                 <div class="name">
                                     @(item.Username)
                                 </div>
