Move time into right top post text container

--- a/src/Squawkings/Views/Shared/Index.cshtml
+++ b/src/Squawkings/Views/Shared/Index.cshtml
@@ -39,10 +39,10 @@
                                 <div class="post-text">
                                     @(item.Content)
                                 </div>
+                                <div class="clear post-time post-time" style="padding-bottom: 10px;">
+                                    @(item.Time)
+                                </div>
                             </div>
-                        </div>
-                        <div class="clear post-time">
-                            @(item.Time)
                         </div>
                     </div>
                 </div>  
