--- a/src/Squawkings/Content/Site.css
+++ b/src/Squawkings/Content/Site.css
@@ -46,7 +46,7 @@ body {
     color: #333;
     text-align: left;
     border: 1px solid #D4D4D4;
-    min-height:100px;
+    min-height:110px;
     height:auto !important;
     height:100px; 
 }
@@ -87,7 +87,7 @@ body {
     color: #333;
 }
 .post-time {
-    padding-top: 15px;
+    padding: 15px 0 15px 0;
     color: #A2A2A2;
 }
 #header {
