Fix rounding on bottom of first and top of last post

--- a/src/Squawkings/Content/Site.css
+++ b/src/Squawkings/Content/Site.css
@@ -59,17 +59,21 @@ textarea{
     height:100px; 
     margin: 0 auto;
 }
-.rounded-top, .rounded {
-    border-radius: 5px 5px;
+.rounded-top {
+    border-radius: 5px 5px 0 0;
     -moz-border-radius-topleft: 5px;
     -moz-border-radius-topright: 5px;
 }
-.rounded-bottom, .rounded {
-    border-radius: 5px 5px ;
+.rounded-bottom {
+    border-radius: 0 0 5px 5px ;
     -moz-border-radius-bottomleft: 5px;
     -moz-border-radius-bottomright: 5px;
 }
-.outer {
+.rounded {
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+.outer-image {
     width: 57px;
     height: 57px;
     -webkit-box-shadow: 0px 0px 10px #4d4d4d;
