--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -1,3 +1,4 @@
+/* @reference "bootstrap.css"; */
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
