--- a/src/Squawkings/Views/Shared/_Layout.cshtml
+++ b/src/Squawkings/Views/Shared/_Layout.cshtml
@@ -1,10 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Bundles.Reference("Content");
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Reset.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    @Bundles.RenderStylesheets()
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
 </head>
