Logon Page HTML and CSS

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -134,3 +134,46 @@ textarea{
     font-size: 13px;
     color: #222;
 }
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+/* Logon Page */
+#logon-container {
+   margin: 0 auto;
+   width: 300px;
+}
+#logon-dialog {
+	margin-top: 150px; /* half of #content height*/
+	margin-left: auto;
+	margin-right: auto;
+	height: 190px;
+	background-color: white;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-khtml-border-radius: 5px;  
+	border-radius: 5px;
+	border: 2px solid #D4D4D4;
+    padding: 15px;
+}
+#logon-banner { 
+    height: 45px;
+    background:  url("images/header.png") repeat-x;
+	position: fixed;
+	top: 0px;
+	width: 100%;
+}
+input.logon-input-userid, input.logon-input-password {
+    width: 100%;
+	height: 30px;
+}
+input.logon-input-password {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+input.logon-input-rememberme {
+}
+#logon-input-button {
+    width: 100%;
+	margin-top: 10px;
+}
+
