--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -2,31 +2,63 @@
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
+@radius: 5px;
+@cfldval: #ff0000;
+@bkgcfldval: #ffeeee;
+@bkgcolor: #D4D4D4;
+@shadowcolor: #4D4D4D;
+@pad-std: 15px;
+@pad-small1: 10px;
+@pad-small2: 5px;
+@textareaBorder: #CDCDCD;
+@sqauwktext: #333;
+@timecolor: #A2A2A2;
+@stdborderwidth: 1px;
+@stdbordertype: solid;
+@stdbordercolor: @textareaBorder;
+@stdBorder: @stdborderwidth @stdbordertype @stdbordercolor;
+@margincentre: 0 auto;
+@bold: bold;
+@dfltfontsize: 12px;
+@hdrfontsize: (@dfltfontsize + 1);
+@sqauwkfontsize: (@dfltfontsize + 2);
+@logoncontwidth: 300px;
+@logonconttopmargin: @logoncontwidth/2;
+@hdrtextcolor: #222;
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+.rounded-corners (@radiusin: 5px) {
+  -webkit-border-radius: @radiusin;
+  -moz-border-radius: @radiusin;
+  -ms-border-radius: @radiusin;
+  -o-border-radius: @radiusin;
+  border-radius: @radiusin;
+}
+.displaynone {
+	display: none;
+}
 .field-validation-error
 {
-    color: #ff0000;
+    color: @cfldval;
 }
-
 .field-validation-valid
 {
-    display: none;
+    .displaynone;
 }
-
 .input-validation-error
 {
-    border: 1px solid #ff0000;
-    background-color: #ffeeee;
+    border: @stdBorder;
+	border-color: @cfldval;
+    background-color: @bkgcfldval;
 }
-
 .validation-summary-errors
 {
-    font-weight: bold;
-    color: #ff0000;
+    font-weight: @bold;
+    color: @cfldval;
 }
-
 .validation-summary-valid
 {
-    display: none;
+    .displaynone;
 }
 
 /* Robs Styles 
@@ -35,7 +67,7 @@ body {
     background: url("images/background.png");
     padding: 0;
     font-family: "Helvetica Neue", Sans-Serif; 
-    font-size: 12px;
+    font-size: @dfltfontsize;
     line-height: 18px;
 }
 textarea{
@@ -43,117 +75,109 @@ textarea{
     margin-left: auto;
     margin-right: auto;
     width: 930px;
-    border-radius: 5px;
-    border: 1px solid #CDCDCD;
+    border-radius: @radius;
+    border: @stdBorder;
 }
 .container
 {
-	margin: 0 auto;
+	margin: @margincentre;
 	width: 960px;
 }
 .squawk-post, .squawks-container, .squawks-container-top, .squawks-container-bottom, .squawk-item {
     background-color: white;
-    color: #333;
+    color: (@hdrtextcolor*5/2);
     text-align: left;
-    border-bottom: 1px solid #D4D4D4;
+    border-bottom: @stdborderwidth @stdbordertype @bkgcolor;
     min-height:110px;
     height:auto !important;
     height:100px; 
-    margin: 0 auto;
+    margin: @margincentre;
 }
 .squawk-item {
     position: relative;
 }
 .squawk-post, .squawks-container  {
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    margin-bottom: 15px;
+    border-radius: @radius;
+    -moz-border-radius: @radius;
+    margin-bottom: @pad-std;
 }
 .squawk-post-top {
     text-align: center;
-    padding-top: 15px; 
+    padding-top: @pad-std; 
 }
 .squawk-post-bottom {
     text-align: right;
-    padding: 0 15px 15px 0; 
+    padding: 0 @pad-std @pad-std 0; 
 }
 #post-button {
-    margin: 10px 0 0 0;
+    margin: @pad-small1 0 0 0;
 }
 .squawks-container .squawk-item:first-child {
-    border-radius: 5px 5px 0 0;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
+    border-radius: @radius @radius 0 0;
+    -moz-border-radius-topleft: @radius;
+    -moz-border-radius-topright: @radius;
 }
 .squawks-container .squawk-item:last-child {
-    border-radius: 0 0 5px 5px ;
-    -moz-border-radius-bottomleft: 5px;
-    -moz-border-radius-bottomright: 5px;
+    border-radius: 0 0 @radius @radius ;
+    -moz-border-radius-bottomleft: @radius;
+    -moz-border-radius-bottomright: @radius;
 }
 .squawk-item-image {
     width: 57px;
     height: 57px;
-    -webkit-box-shadow: 0px 0px 10px #4d4d4d;
-    -moz-box-shadow: 0px 0px 10px #4d4d4d;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -khtml-border-radius: 8px;  
-    border-radius: 8px;
+    -webkit-box-shadow: 0px 0px @pad-small1 @shadowcolor; 
+    -moz-box-shadow: 0px 0px @pad-small1 @shadowcolor;
+	.rounded-corners;
     overflow: hidden;
     position: absolute;
-    left: 15px;
-    top: 15px;
+    left: @pad-std;
+    top: @pad-std;
 }
 .squawk-item-inner {
-    padding: 15px 15px 15px 82px;
+    padding: @pad-std @pad-std @pad-std 82px;
 }
 .squawk-item-name {
-    font-size: 14px;
-    font-weight: bold;
+    font-size: @sqauwkfontsize;
+    font-weight: @bold;
     padding-bottom: 3px;
 }
 .squawk-item-text {
-    color: #333;
+    color: @sqauwktext;
 }
 .squawk-item-time {
-    padding: 15px 0 0 0;
-    color: #A2A2A2;
+    padding: @pad-std 0 0 0;
+	color: @timecolor;
 }
 #header {
     height: 100px;
 }
 #global-header-text {
-    color:#555; 
+    color:(@hdrtextcolor*2.5); 
     font-size: 50px;
     font-weight: 100;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
-    padding-top: 25px;
+    text-shadow: 0 @stdborderwidth 0 rgba(255, 255, 255, 0.9);
+    padding-top: (@pad-std+10);
 }
 #global-header-text-small {
     padding: 20px 0 0 5px;
-    font-size: 13px;
-    color: #222;
+    font-size: @hdrfontsize;
+    color: @hdrtextcolor;
 }
-
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 /* Logon Page */
 #logon-container {
-   margin: 0 auto;
-   width: 300px;
+   margin: @margincentre;
+   width: @logoncontwidth;
 }
 #logon-dialog {
-	margin-top: 150px; /* half of #content height*/
+	margin-top: @logonconttopmargin; 
 	margin-left: auto;
 	margin-right: auto;
 	height: 190px;
 	background-color: white;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-khtml-border-radius: 5px;  
-	border-radius: 5px;
-	border: 2px solid #D4D4D4;
-    padding: 15px;
+	.rounded-corners;
+	border: (@stdborderwidth*2) @stdbordertype @bkgcolor;
+    padding: @pad-std;
 }
 #logon-banner { 
     height: 45px;
@@ -162,18 +186,19 @@ textarea{
 	top: 0px;
 	width: 100%;
 }
-input.logon-input-userid, input.logon-input-password {
+.inputheightwidth(@marginptop: @pad-small1, @marginpbot: @pad-small1) {
     width: 100%;
 	height: 30px;
+    margin-top: @marginptop;
+    margin-bottom: @marginpbot;
+}
+input.logon-input-userid {
+   .inputheightwidth(0,0);
 }
 input.logon-input-password {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-input.logon-input-rememberme {
+   .inputheightwidth(10px,10px);
 }
 #logon-input-button {
-    width: 100%;
-	margin-top: 10px;
+    .inputheightwidth(10px,0);
 }
 
