--- a/src/Squawkings/Views/Logon/Index.cshtml
+++ b/src/Squawkings/Views/Logon/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HandleErrorInfo
+@{
     ViewBag.Title = "Logon.cshtml";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -6,15 +7,20 @@
 <div id="logon-banner">
 </div>
 <div id="logon-container">
+    @Html.BeginForm("index", "logon", FormMethod.Post) {
     <div id="logon-dialog">
-        <input class="logon-input-userid" name="userid" title="Please enter a Password" maxlength="50"
-            placeholder="username" type="text" />
-        <input class="logon-input-password" name="password" title="Please enter a Password"
-            maxlength="50" placeholder="password" type="password" />
+        <input class="logon-input-userid" name="UserName" title="Please enter a Password" maxlength="50"
+               placeholder="username" type="text" />
+        <input class="logon-input-password" name="Password" title="Please enter a Password"
+               maxlength="50" placeholder="password" type="password" />
         <label class="checkbox">
-            <input class="logon-input-rememberme" name="rememberme" value="Y" type="checkbox" />
+            <input class="logon-input-rememberme" name="RememberMe" value="Y" type="checkbox" />
             Remember Me
         </label>
-        <input id="logon-input-button" class="btn btn-primary " value="Log In" type="button" />
+        <input id="logon-input-button" class="btn btn-primary " value="Log In" type="submit" />
     </div>
+    @{ Html.EndForm(); }
 </div>
+
+<div id="error-dialog" >@Html.ValidationMessage("logonerror")</div>
+
