Add Logon Antiforgery, Password Hashing and verification

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -115,6 +115,13 @@ textarea{
 #post-button {
     margin: @pad-small1 0 0 0;
 }
+#logoff-button{
+	top:0;
+	left:1250px;
+	width: 50px;
+	text-align: right;
+	position: absolute;
+}
 .squawks-container .squawk-item:first-child {
     border-radius: @radius @radius 0 0;
     -moz-border-radius-topleft: @radius;
