--- a/src/Squawkings/Views/Logon/Index.cshtml
+++ b/src/Squawkings/Views/Logon/Index.cshtml
@@ -8,6 +8,7 @@
 </div>
 <div id="logon-container">
     @Html.BeginForm("index", "logon", FormMethod.Post) {
+    @Html.AntiForgeryToken("AntiForgeryTokenSalt")%>
     <div id="logon-dialog">
         <input class="logon-input-userid" name="UserName" title="Please enter a Password" maxlength="50"
                placeholder="username" type="text" />
