Fix Connectiong String, add global squawks, add routing for profile

--- a/src/Squawkings/Content/Site.less
+++ b/src/Squawkings/Content/Site.less
@@ -112,15 +112,8 @@ textarea{
     text-align: right;
     padding: 0 @pad-std @pad-std 0; 
 }
-#post-button {
+#post-button, #logoff-button {
     margin: @pad-small1 0 0 0;
-}
-#logoff-button{
-	top:0;
-	left:1250px;
-	width: 50px;
-	text-align: right;
-	position: absolute;
 }
 .squawks-container .squawk-item:first-child {
     border-radius: @radius @radius 0 0;
