--- a/src/Squawkings/Views/Logon/Index.cshtml
+++ b/src/Squawkings/Views/Logon/Index.cshtml
@@ -1,28 +1,30 @@
-﻿@model Squawkings.Controllers.LogonViewModel
+﻿@using Squawkings.Controllers
+@model Squawkings.Controllers.LogonViewModel
 @{
-    ViewBag.Title = "Logon.cshtml";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Logon.cshtml";
 }
 
-<div id="logon-banner">
-</div>
 <div id="logon-container">
-    @Html.BeginForm("index", "logon", FormMethod.Post) {
-    @Html.AntiForgeryToken("AntiForgeryTokenSalt")
-    @Html.HiddenFor(x=>x.ReturnUrl)
-    <div id="logon-dialog">
-        @Html.TextBoxFor(x=>x.UserName, new {@class = "logon-input-userid",  title="Please enter a User Name",  maxlength="50", placeholder="username"})
-        @Html.PasswordFor(x=>x.PassWord, new {@class = "logon-input-password",  title="Please enter a Password",  maxlength="50", placeholder="password"})
-              
-        <label class="checkbox">
-            @Html.CheckBoxFor(x=>x.RememberMe) 
-            Remember Me
-        </label>
+    @using ( Html.Form<LogonInputModel>("index")) {
 
-        <input id="logon-input-button" class="btn btn-primary " value="Log In" type="submit" />
-    </div>
-    @{ Html.EndForm(); }
+        @Html.AntiForgeryToken("AntiForgeryTokenSalt")
+        @Html.Input(x=>x.ReturnUrl).Hide()
+        <div id="logon-dialog">
+            @Html.Input(x=>x.UserName).AddClass("logon-input-userid").Attr("title","Please enter a User Name").Attr("maxlength","50").Attr("placeholder","username")
+            @Html.Input(x=>x.PassWord).AddClass("logon-input-password").Attr("title","Please enter a Password").Attr("maxlength","50").Attr("placeholder","password")
+            
+            <label class="checkbox">
+                @Html.Input(x=>x.RememberMe) 
+                Remember Me
+            </label>
+
+            <input id="logon-input-button" class="btn btn-primary " value="Log In" type="submit" />
+        </div>
+    }
 </div>
 
-<div id="error-dialog" >@Html.ValidationMessage("logonerror")</div>
+<div id="error-dialog" >
+    @Html.ValidationSummary(true)
+</div>
 
