--- a/src/Squawkings/Views/Shared/_Layout.cshtml
+++ b/src/Squawkings/Views/Shared/_Layout.cshtml
@@ -9,9 +9,19 @@
     @Bundles.RenderStylesheets()
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 </head>
 
 <body>
+    <div id="logon-banner">
+        <div class="link-text"  style="font-size: 16px; text-align:right; padding-right: 20px; color:white;">
+            @Html.Link("Home","index","home")
+            @Html.Link("Global","index","global")
+            @(string.IsNullOrEmpty(User.Identity.Name) ? Html.Link("Logon", "logon", "index") : Html.Link("Logoff", "logoff", "logon"))
+        </div>
+    </div>
+    <div style="margin-top: 40px;"></div>        
     @RenderBody()
 </body>
 </html>
